# Monopoly

./: CMakeLists.txt  build.sh  tags
assets/: map.csv
src/: block.cpp  block.h  common.h  log.cpp  log.h  main.cpp  player.cpp  player.h  render.cpp  render.h
